--- a/src/app/album-page/album-tracks/album-tracks.component.html
+++ b/src/app/album-page/album-tracks/album-tracks.component.html
@@ -32,7 +32,7 @@
     <ng-container matColumnDef="menu">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let track">
-            <button mat-icon-button [matMenuTriggerFor]="menu" class="playlist-menu icon-active" *ngIf="auth">
+            <button mat-icon-button [matMenuTriggerFor]="menu" class="playlist-menu icon-active" *ngIf="isAuth$ | async">
                 <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
@@ -42,7 +42,7 @@
             </mat-menu>
 
             <mat-menu #playlist="matMenu">
-                <button mat-menu-item  *ngFor="let playlist of playlistList" (click)="addSongToPlaylist(playlist.id, track.uri)">{{ playlist.name }}</button>
+                <button mat-menu-item  *ngFor="let playlist of playlistList$ | async" (click)="addSongToPlaylist(playlist.id, track.uri)">{{ playlist.name }}</button>
             </mat-menu>
         </td>
     </ng-container>
